--- a/src/App.css
+++ b/src/App.css
@@ -12,19 +12,20 @@ body {
   display: flex;
   overflow: hidden;
   width: 100vw;
-  height: 100vh;
   position: relative;
 }
 
 .map-container {
-  flex: 7 1 auto;
+  flex: 7 0;
   background: red;
-  height: 100vh;
+  height: 100%;
 }
 
 .controls-container {
-  flex: 3 1 auto;
+  flex: 3 0;
   background: rgb(0, 13, 89);
+  position: relative;
+  height: 100%;
 }
 
 #hamburger {
@@ -40,6 +41,24 @@ body {
   z-index: 10;
 }
 
+.modal {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  background: white;
+  border: 1px solid blue;
+}
+
+.modal-header {
+  padding: 1rem 2rem;
+  font-size: 2rem;
+  background: blue;
+}
+
 @media only screen and (max-width: 600px) {
   .leaflet-control-container {
     display: none;
@@ -52,8 +71,7 @@ body {
   .controls-container {
     position: absolute;
     z-index: 99;
-    width: 100vh;
-    height: 100vh;
+    width: 100vw;
     transition: transform 0.35s;
     transform: translateY(100%);
   }
