--- a/src/App.css
+++ b/src/App.css
@@ -48,13 +48,15 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 80%;
+  min-width: 50%;
+  min-height: 30%;
   background: white;
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
+  z-index: 200;
 }
 
 .modal-header {
-  padding: 1rem 2rem;
+  padding: 0.5rem 2rem;
   font-size: 2rem;
   background: blue;
 }
@@ -79,5 +81,9 @@ body {
   .controls-container.visible {
     position: absolute;
     transform: translateY(0%);
+  }
+
+  .modal {
+    min-width: 80%;
   }
 }
