--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
 .hidden {
@@ -26,12 +27,19 @@ body {
 
 .controls-container {
   flex: 3 0;
-  background: rgb(236, 236, 236);
+  display: flex;
+  flex-direction: column;
+  background: white;
   position: relative;
   overflow: hidden;
   overflow-y: scroll;
   height: 100%;
   border-left: 1px solid black;
+}
+
+.controls-section {
+  padding: 0;
+  margin: 0;
 }
 
 #hamburger {
@@ -88,8 +96,7 @@ body {
   .controls-container {
     position: absolute;
     z-index: 99;
-    width: 100vw;
-    transition: transform 0.35s;
+    width: 100%;
     transform: translateY(100%);
   }
 
@@ -111,20 +118,65 @@ li.selected {
   font-weight: bold;
 }
 
-
 /* Scrollbar Styling */
 ::-webkit-scrollbar {
-    width: 8px;
+  width: 8px;
 }
- 
+
 ::-webkit-scrollbar-track {
-    background-color: #ebebeb;
-    -webkit-border-radius: 8px;
-    border-radius: 8px;
+  background-color: #ebebeb;
+  -webkit-border-radius: 8px;
+  border-radius: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
-    -webkit-border-radius: 8px;
-    border-radius: 8px;
-    background: #6d6d6d; 
+  -webkit-border-radius: 8px;
+  border-radius: 8px;
+  background: #6d6d6d;
+}
+
+.title {
+  font-size: 1.6rem;
+
+  padding: 0.2rem 1rem;
+  margin: 0;
+  color: white;
+}
+
+.content {
+  padding: 0.2rem;
+  padding-left: 1rem;
+}
+
+.subtitle {
+  font-size: 1.2rem;
+  margin: 0;
+}
+
+.list-item {
+  margin: 0;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.list-item:hover {
+  background-color: #c5c5c5;
+}
+
+ul {
+  margin: 0.5rem 2rem;
+  margin-right: 0;
+  padding: 0;
+}
+
+.section-title {
+  background: rgb(40, 126, 247);
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+}
+
+.section-title button {
+  align-self: center;
+  font-weight: bold;
 }
