--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-html {
-  background-color: rgb(0, 13, 89);
-}
-
 body {
   margin: 0;
   padding: 0;
@@ -64,10 +60,11 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   min-width: 25%;
-  min-height: 30%;
   background: white;
-  /* border: 1px solid blue; */
+  border-radius: 10px;
+  border: 1px solid black;
   z-index: 200;
+  list-style: none;
 }
 
 .modal-backdrop {
@@ -81,7 +78,42 @@ body {
 .modal-header {
   padding: 0.5rem 2rem;
   font-size: 2rem;
-  background: blue;
+  background: #0091ad;
+  z-index: 20;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.modal-content {
+  padding: 0 1rem 1rem 1rem;
+}
+
+.modal-content p {
+  margin: 0.5rem 0;
+}
+
+.button-container {
+  display: flex;
+}
+
+.inspection-container {
+  margin: 1rem 0;
+}
+
+.button-container button {
+  margin-right: 1rem;
+}
+
+.inspection-card {
+  margin: 1rem 0;
+}
+
+.extinguishers-list {
+  padding: 1px;
+}
+
+.point {
+  padding: 0.2rem 0;
 }
 
 @media only screen and (max-width: 600px) {
@@ -106,7 +138,7 @@ body {
   }
 
   .modal {
-    min-width: 80%;
+    width: 80%;
   }
 }
 
@@ -170,7 +202,7 @@ ul {
 }
 
 .section-title {
-  background: rgb(40, 126, 247);
+  background: #0091ad;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -179,4 +211,14 @@ ul {
 .section-title button {
   align-self: center;
   font-weight: bold;
+}
+
+.my-div-icon {
+  width: 2px;
+  height: 2px;
+}
+
+
+.danger-info {
+  color: rgb(180, 184, 117);
 }
