--- a/src/App.css
+++ b/src/App.css
@@ -116,6 +116,7 @@ input::placeholder {
 .modal-content {
   margin: 0rem 1rem;
   display: flex;
+  flex-direction: column;
   justify-content: center;
 }
 
